--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR translation/79019
+	PR translation/79020
+	* semantics.c (finish_omp_clauses): Add missing whitespace to
+	translatable strings.
+	* cp-cilkplus.c (cpp_validate_cilk_plus_loop_aux): Fix comment typo.
+
 2017-01-07  Jason Merrill  <jason@redhat.com>
 
 	PR c++/78948 - instantiation from discarded statement
