--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-01-10  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/79034
+	* g++.dg/torture/pr79034.C: New testcase.
+
 2017-01-10  Martin Liska  <mliska@suse.cz>
 
 	* gcc.dg/ipa/ipa-icf-1.c: Change scanned pattern.
