--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -26,8 +26,7 @@
 	(sem_item_optimizer::dump_cong_classes): Likewise.
 	(sem_item_optimizer::merge_classes): Likewise.
 	* ipa-icf.h (congruence_class_hash): Rename from
-	congruence_class_group_hash.  Remove declaration of
-	m_classes_vec.
+	congruence_class_group_hash.  Remove declaration of m_classes_vec.
 
 2017-01-10  Andrew Senkevich  <andrew.senkevich@intel.com>
 
@@ -148,7 +147,8 @@
 
 	* config/aarch64/aarch64-cores.def: Add thunderx2t99.  Change vulcan
 	to reference thunderx2t99 for the tuning structure
-	* config/aarch64/aarch64-cost-tables.h (vulcan_extra_costs): Rename to ...
+	* config/aarch64/aarch64-cost-tables.h (vulcan_extra_costs):
+	Rename to ...
 	(thunderx2t99_extra_costs): This.
 	* config/aarch64/aarch64-tune.md: Regenerate.
 	* config/aarch64/aarch64.c (vulcan_addrcost_table): Rename to ...
@@ -181,8 +181,7 @@
 2017-01-09  Martin Liska  <mliska@suse.cz>
 
 	PR pch/78970
-	* gcc.c (driver_handle_option): Handle OPT_E and set
-	have_E.
+	* gcc.c (driver_handle_option): Handle OPT_E and set have_E.
 	(lookup_compiler): Do not show error message with have_E.
 
 2017-01-09  Jakub Jelinek  <jakub@redhat.com>
@@ -226,7 +225,6 @@
 2017-01-08  Sandra Loosemore  <sandra@codesourcery.com>
 
 	PR other/16519
-
 	* doc/invoke.texi (Option Summary): Move -pthread to Linker Options
 	and Preprocessor Options.
 	(Options for Linking): Document -pthread here....
@@ -256,7 +254,6 @@
 2017-01-07  Sandra Loosemore  <sandra@codesourcery.com>
 
 	PR preprocessor/54124
-
 	* doc/cppopts.texi: Reformat -d subtable to list the full name
 	of the options.  Add cross-reference to the docs for the general
 	compiler -d options.
@@ -266,7 +263,6 @@
 2017-01-07  Sandra Loosemore  <sandra@codesourcery.com>
 
 	PR preprocessor/13498
-
 	* doc/cpp.texi (Search Path): Rewrite to remove obsolete and
 	redudant material, and reflect new command-line options.
 	(System Headers): Likewise.
@@ -275,8 +271,8 @@
 
 	* doc/cppdiropts.texi: Merge documentation of -I, -iquote,
 	-isystem, and -idirafter.  Copy-edit.
-	* doc/cppopts.texi: Copy-edit.  Remove contradiction about 
-	default for -ftrack-macro-expansion.  Delete obsolete and 
+	* doc/cppopts.texi: Copy-edit.  Remove contradiction about
+	default for -ftrack-macro-expansion.  Delete obsolete and
 	badly-formatted implementation details about -fdebug-cpp output.
 	* doc/cppwarnopts.texi: Copy-edit.
 
@@ -346,8 +342,7 @@
 	* system.h (GCC_DIAGNOSTIC_PUSH_IGNORED, GCC_DIAGNOSTIC_POP,
 	GCC_DIAGNOSTIC_STRINGIFY): Define.
 
-	* read-rtl.c (rtx_reader::read_rtx_code): Avoid -Wsign-compare
-	warning.
+	* read-rtl.c (rtx_reader::read_rtx_code): Avoid -Wsign-compare warning.
 
 2017-01-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
@@ -498,8 +493,7 @@
 
 2017-01-06  David Malcolm  <dmalcolm@redhat.com>
 
-	* passes.c (execute_one_pass): Split out pass-skipping logic
-	into...
+	* passes.c (execute_one_pass): Split out pass-skipping logic into...
 	(determine_pass_name_match): ...this new function and...
 	(should_skip_pass_p): ...this new function.
 
@@ -541,8 +535,7 @@
 
 	* Makefile.in (OBJS): Add read-md.o, read-rtl.o,
 	read-rtl-function.o, and selftest-rtl.o.
-	* config/aarch64/aarch64.c: Include selftest.h and
-	selftest-rtl.h.
+	* config/aarch64/aarch64.c: Include selftest.h and selftest-rtl.h.
 	(selftest::aarch64_test_loading_full_dump): New function.
 	(selftest::aarch64_run_selftests): New function.
 	(TARGET_RUN_TARGET_SELFTESTS): Wire it up to
@@ -579,8 +572,7 @@
 	* read-md.h (md_reader::md_reader): Add new param "compact".
 	(md_reader::read_file): New method.
 	(md_reader::is_compact): New accessor.
-	(md_reader::read_name): Convert return type from void to
-	file_location.
+	(md_reader::read_name): Convert return type from void to file_location.
 	(md_reader::read_name_or_nil): New decl.
 	(md_reader::read_name_1): New decl.
 	(md_reader::m_compact): New field.
@@ -590,8 +582,7 @@
 	(rtx_reader::read_rtx_operand): Make virtual and convert return
 	type from void to rtx.
 	(rtx_reader::read_until): New decl.
-	(rtx_reader::handle_any_trailing_information): New virtual
-	function.
+	(rtx_reader::handle_any_trailing_information): New virtual function.
 	(rtx_reader::postprocess): New virtual function.
 	(rtx_reader::finalize_string): New virtual function.
 	(rtx_reader::m_in_call_function_usage): New field.
